# ecsact_sdk

./: .bazelignore  .bazelrc  .clang-format  .editorconfig  .gitignore  BUILD.bazel  CONTRIBUTING.md  CheckDist.sh  CopyDist.ps1  CreateDeb.ps1  CreateMsix.bat  CreateMsix.ps1  DevInstall.ps1  LICENSE.md  LatestInstall.ps1  MODULE.bazel  README.md  UploadDeb.ps1  UploadMsix.ps1  WORKSPACE.bazel  ecsact_sdk.appinstaller  index.bzl  install.sh  pkg.bzl  prebuilt-tools.bzl  release-notes-template  release.nu  renovate.json
.github/workflows/: main.yml  release.yml
bazel/: copts.bzl
bazel/tools/: wsc.cmd  wsc.sh
cli/: BUILD.bazel  cli.cc
cli/commands/: BUILD.bazel  benchmark.cc  benchmark.hh  codegen.cc  codegen.hh  command.hh  config.cc  config.hh
examples/: README.md  example.ecsact  extras.ecsact
executable_path/: BUILD.bazel  executable_path.hh  unix_executable_path.cc  windows_executable_path.cc
