load(":pkg.bzl", "pkg_executable")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@bzlws//:index.bzl", "bzlws_copy", "bzlws_extract")

pkg_executable(
    name = "ecsact_rtb_runfiles",
    bin = "@ecsact_rtb//cli:ecsact_rtb",
    path = "ecsact_rtb",
)

pkg_tar(
    name = "runfiles_tar",
    srcs = [":ecsact_rtb_runfiles"],
)

bzlws_extract(
    name = "copy_runfiles",
    testonly = True,
    srcs = [":runfiles_tar"],
    out = "dist/bin",
    force = True,
)

bzlws_copy(
    name = "copy_dist_bin",
    srcs = [
        "//cli:ecsact",
        "@ecsact_rtb//cli:ecsact_rtb",
    ],
    out = "dist/bin/{FILENAME}",
    force = True,
)

bzlws_copy(
    name = "copy_dist_images",
    srcs = [
        "@ecsact_logo//:ecsact-color",
        "@ecsact_logo//:ecsact-color150",
        "@ecsact_logo//:ecsact-color44",
    ],
    out = "dist/images/{FILENAME}",
    force = True,
)

bzlws_copy(
    name = "copy_dist_include",
    srcs = [
        "@ecsact_lang_cpp//:headers",
        "@ecsact_runtime//:headers",
    ],
    out = "dist/include/{FILEPATH}",
    force = True,
    strip_filepath_prefix = "external/{BAZEL_LABEL_WORKSPACE_NAME}",
)

bzlws_copy(
    name = "copy_dist_codegen_plugins",
    srcs = [
        "@ecsact_lang_cpp//cpp_header_codegen",
        "@ecsact_lang_cpp//cpp_meta_header_codegen",
        "@ecsact_lang_cpp//cpp_systems_header_codegen",
        "@ecsact_lang_cpp//cpp_systems_source_codegen",
        "@ecsact_lang_cpp//systems_header_codegen",
        "@ecsact_lang_csharp//csharp_codegen",
        "@ecsact_lang_json//json_codegen",
    ],
    out = "dist/share/ecsact/plugins/{BAZEL_LABEL_NAME}.{EXTNAME}",
    force = True,
)
