load(":pkg.bzl", "pkg_executable")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@bzlws//:index.bzl", "bzlws_copy", "bzlws_extract")

pkg_executable(
    name = "ecsact_rtb_runfiles",
    bin = "@ecsact_rtb//cli:ecsact_rtb",
    path = "ecsact_rtb",
)

pkg_tar(
    name = "runfiles_tar",
    srcs = [":ecsact_rtb_runfiles"],
)

bzlws_extract(
    name = "copy_runfiles",
    testonly = True,
    srcs = [":runfiles_tar"],
    out = "dist/bin",
    force = True,
)

bzlws_copy(
    name = "copy_dist_bin",
    srcs = [
        "@ecsact_cli",
        "@ecsact_rtb//cli:ecsact_rtb",
        "@ecsact_lsp_server",
    ],
    out = "dist/bin/{FILENAME}",
    force = True,
)

bzlws_copy(
    name = "copy_dist_images",
    srcs = [
        "@ecsact_logo//:ecsact-color",
        "@ecsact_logo//:ecsact-color150",
        "@ecsact_logo//:ecsact-color44",
    ],
    out = "dist/images/{FILENAME}",
    force = True,
)

bzlws_copy(
    name = "copy_dist_include",
    srcs = [
        "@ecsact_lang_cpp//:headers",
        "@ecsact_runtime//:headers",
    ],
    out = "dist/include/{FILEPATH}",
    force = True,
    strip_filepath_prefix = "external/{BAZEL_LABEL_WORKSPACE_NAME}",
)

# keep sorted
_plugins = [
    "@ecsact_lang_cpp//cpp_header_codegen:ecsact_cpp_header_codegen_bin",
    "@ecsact_lang_cpp//cpp_meta_header_codegen:ecsact_cpp_meta_header_codegen_bin",
    "@ecsact_lang_cpp//cpp_systems_header_codegen:ecsact_cpp_systems_header_codegen_bin",
    "@ecsact_lang_cpp//cpp_systems_source_codegen:ecsact_cpp_systems_source_codegen_bin",
    "@ecsact_lang_cpp//systems_header_codegen:ecsact_systems_header_codegen_bin",
    "@ecsact_lang_csharp//csharp_codegen:ecsact_csharp_codegen_bin",
    "@ecsact_lang_json//json_codegen:ecsact_json_codegen_bin",
]

bzlws_copy(
    name = "copy_dist_codegen_plugins",
    srcs = select({
        "@platforms//os:windows": _plugins + ["@ecsact_rust_codegen_windows//file"],
        "@platforms//os:linux": _plugins + ["@ecsact_rust_codegen_linux//file"],
        "//conditions:default": _plugins,
    }),
    out = "dist/share/ecsact/plugins/{BAZEL_LABEL_NAME}[:-4].{EXTNAME}",
    force = True,
)
