load("@bzlws//rules:bzlws_copy.bzl", "bzlws_copy")

bzlws_copy(
    name = "copy_dist_bin",
    srcs = [
        "@ecsact_cli",
        "@ecsact_lsp_server",
    ],
    out = "dist/bin/{FILENAME}",
    force = True,
)

bzlws_copy(
    name = "copy_dist_images",
    srcs = [
        "@ecsact_logo//:ecsact-color.png",
        "@ecsact_logo//:ecsact-color150.png",
        "@ecsact_logo//:ecsact-color44.png",
    ],
    out = "dist/images/{FILENAME}",
    force = True,
)

bzlws_copy(
    name = "copy_dist_include",
    srcs = [
        "@ecsact_codegen//:headers",
        "@ecsact_lang_cpp//:headers",
        "@ecsact_runtime//:headers",
        "@ecsact_si_wasm//:headers",
    ],
    out = "dist/include/{FILEPATH}",
    force = True,
    strip_filepath_prefix = "external/{BAZEL_LABEL_WORKSPACE_NAME}",
)

# keep sorted
_plugins = [
    "@ecsact_lang_cpp//cpp_header_codegen:ecsact_cpp_header_codegen",
    "@ecsact_lang_cpp//cpp_systems_header_codegen:ecsact_cpp_systems_header_codegen",
    "@ecsact_lang_cpp//cpp_systems_source_codegen:ecsact_cpp_systems_source_codegen",
    "@ecsact_lang_cpp//systems_header_codegen:ecsact_systems_header_codegen",
    "@ecsact_lang_csharp//csharp_codegen:ecsact_csharp_codegen",
    "@ecsact_lang_json//json_codegen:ecsact_json_codegen",
]

bzlws_copy(
    name = "copy_dist_codegen_plugins",
    srcs = select({
        "@platforms//os:windows": _plugins,
        "@platforms//os:linux": _plugins,
        "//conditions:default": _plugins,
    }),
    out = "dist/share/ecsact/plugins/{BAZEL_LABEL_NAME}.{EXTNAME}",
    force = True,
)

bzlws_copy(
    name = "copy_dist_recipe_bundles",
    srcs = [
        "@ecsact_rt_entt",
        "@ecsact_rt_reference//async_reference",
        "@ecsact_rt_reference//serialize_reference",
    ],
    out = "dist/share/ecsact/recipes/{FILENAME}",
    force = True,
)
