module(name = "ecsact_sdk")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "ecsact_si_wasm", version = "0.1.2")
bazel_dep(name = "rules_ecsact", version = "0.4.5")
bazel_dep(name = "ecsact_rt_entt", version = "0.3.2")
bazel_dep(name = "ecsact_codegen", version = "0.2.0")
bazel_dep(name = "ecsact_parse", version = "0.5.1")
bazel_dep(name = "ecsact_runtime", version = "0.6.6")
bazel_dep(name = "ecsact_interpret", version = "0.6.4")
bazel_dep(name = "ecsact_lang_cpp", version = "0.4.4")
bazel_dep(name = "ecsact_cli", version = "0.3.11")
bazel_dep(name = "ecsact_lsp_server", version = "0.2.0")
bazel_dep(name = "ecsact_lang_json", version = "0.1.3")
bazel_dep(name = "ecsact_lang_csharp", version = "0.1.2")
bazel_dep(name = "boost.dll", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.process", version = "1.83.0.bzl.2")

# https://github.com/jbeder/yaml-cpp/issues/1229
bazel_dep(name = "yaml-cpp")
git_override(
    module_name = "yaml-cpp",
    commit = "37f1b8b8c9e5172ff3a79a3d5fdbb87f2994842b",
    remote = "https://github.com/jbeder/yaml-cpp",
)

bazel_dep(name = "bzlws")
git_override(
    module_name = "bzlws",
    commit = "b90ae6b38e351979cae2af355f55d2c68d997030",
    remote = "https://github.com/zaucy/bzlws",
)
