workspace(name = "ecsact_sdk")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_file(
    name = "ecsact_rust_codegen_windows",
    downloaded_file_path = "ecsact_rust_codegen.dll",
    sha256 = "d35c8226f4953faf2d527d295c41adefd3215c61bad6f709e8ac812919c07daf",
    url = "https://github.com/ecsact-dev/ecsact_lang_rust/releases/download/0.1.0/ecsact_rust_codegen_bin.dll",
)

http_file(
    name = "ecsact_rust_codegen_linux",
    downloaded_file_path = "ecsact_rust_codegen.so",
    sha256 = "cac4856b63217960b4194812119def5f9a7126483533cc24e847abe66a120536",
    url = "https://github.com/ecsact-dev/ecsact_lang_rust/releases/download/0.1.0/ecsact_rust_codegen_bin.so",
)

http_archive(
    name = "rules_7zip",
    sha256 = "a1603959be68272506849a7ed91e7acd4c2b036a2df1b6d9112c7733a7d607db",
    strip_prefix = "rules_7zip-b064ada4b7878bc83be680fa55fcb16c893f594f",
    urls = ["https://github.com/zaucy/rules_7zip/archive/b064ada4b7878bc83be680fa55fcb16c893f594f.zip"],
)

load("@rules_7zip//:setup.bzl", "setup_7zip")

setup_7zip()

http_archive(
    name = "rules_blender",
    sha256 = "05acad9716ec6c80cadb603e7f585acbaadf670bce6920959824122e25e97e9c",
    strip_prefix = "rules_blender-dc8c77bdb27e4af7cb1c95610a119a8ad64e57c7",
    urls = ["https://github.com/zaucy/rules_blender/archive/dc8c77bdb27e4af7cb1c95610a119a8ad64e57c7.zip"],
)

load("@rules_blender//:repo.bzl", "blender_repository")

blender_repository(name = "blender")

http_archive(
    name = "ecsact_logo",
    sha256 = "1f4c838f694b7be9c9280ce6da17729d54bf04683f3d0015356e22a064a32185",
    strip_prefix = "logo-f2c8a487ea702a551e00044e766bc913c5e7c771",
    urls = ["https://github.com/ecsact-dev/logo/archive/f2c8a487ea702a551e00044e766bc913c5e7c771.zip"],
)
