workspace(name = "ecsact_sdk")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_file(
    name = "ecsact_rust_codegen_windows",
    downloaded_file_path = "ecsact_rust_codegen.dll",
    sha256 = "d35c8226f4953faf2d527d295c41adefd3215c61bad6f709e8ac812919c07daf",
    url = "https://github.com/ecsact-dev/ecsact_lang_rust/releases/download/0.1.0/ecsact_rust_codegen_bin.dll",
)

http_file(
    name = "ecsact_rust_codegen_linux",
    downloaded_file_path = "ecsact_rust_codegen.so",
    sha256 = "cac4856b63217960b4194812119def5f9a7126483533cc24e847abe66a120536",
    url = "https://github.com/ecsact-dev/ecsact_lang_rust/releases/download/0.1.0/ecsact_rust_codegen_bin.so",
)

http_archive(
    name = "rules_7zip",
    sha256 = "89db47017a95de6fc30acd0ff0b70c25e468a21b5e1286940feb21505854f28b",
    strip_prefix = "rules_7zip-9addcf58cdc5022fa5188b5f270bc0c9bb240f46",
    urls = ["https://github.com/zaucy/rules_7zip/archive/9addcf58cdc5022fa5188b5f270bc0c9bb240f46.zip"],
)

load("@rules_7zip//:setup.bzl", "setup_7zip")

setup_7zip()

http_archive(
    name = "rules_blender",
    integrity = "sha256-HKH9Y2wiL/EkVEFcaCZHT8ACW8SHX24UZ8EHEhwcI8w=",
    strip_prefix = "rules_blender-e5f5b1ef894fe4da7b3cbf85ca857b6fd3bdffba",
    urls = ["https://github.com/zaucy/rules_blender/archive/e5f5b1ef894fe4da7b3cbf85ca857b6fd3bdffba.zip"],
)

load("@rules_blender//:repo.bzl", "blender_repository")

blender_repository(name = "blender", blender_version = "system", only_system_installed_blender = True)

http_archive(
    name = "ecsact_logo",
    sha256 = "1f4c838f694b7be9c9280ce6da17729d54bf04683f3d0015356e22a064a32185",
    strip_prefix = "logo-f2c8a487ea702a551e00044e766bc913c5e7c771",
    urls = ["https://github.com/ecsact-dev/logo/archive/f2c8a487ea702a551e00044e766bc913c5e7c771.zip"],
)
