load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "executable_path",
    srcs = select({
        "@platforms//os:windows": ["windows_executable_path.cc"],
        "//conditions:default": ["unix_executable_path.cc"],
    }),
    hdrs = ["executable_path.hh"],
    copts = copts,
    linkopts = select({
        "@platforms//os:windows": ["-DEFAULTLIB:Kernel32"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)
