load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//cli:__subpackages__"])

cc_library(
    name = "command",
    hdrs = ["command.hh"],
    copts = copts,
)

cc_library(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    hdrs = ["benchmark.hh"],
    copts = copts,
    deps = [
        ":command",
        "//executable_path",
        "@magic_enum",
        "@bazelregistry_docopt_cpp//:docopt",
        "@boost//libs/dll",
        "@ecsact_runtime//:core",
        "@ecsact_runtime//:async",
        "@ecsact_runtime//:serialize",
        "@ecsact_si_wasm//:ecsactsi_wasm",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "codegen",
    srcs = ["codegen.cc"],
    hdrs = ["codegen.hh"],
    copts = copts,
    deps = [
        ":command",
        "//executable_path",
        "@magic_enum",
        "@bazelregistry_docopt_cpp//:docopt",
        "@boost//libs/dll",
        "@ecsact_interpret",
        "@ecsact_runtime//:codegen_plugin",
        "@ecsact_runtime//:codegen_plugin_validate",
        "@ecsact_runtime//:dylib",
        "@ecsact_runtime//:meta",
    ],
)

cc_library(
    name = "config",
    srcs = ["config.cc"],
    hdrs = ["config.hh"],
    copts = copts,
    deps = [
        ":command",
        "//executable_path",
        "@bazelregistry_docopt_cpp//:docopt",
        "@nlohmann_json//:json",
    ],
)
